# star-tracker

./: .gitignore  CLAUDE.md  README.md  Untitled1.ppm  Untitled2.ppm  Untitled3.ppm  ap_int.h  db_center.py  dog.pgm  dog_hls.pgm  gray.pgm  gui.py  hls_coarse.pgm  hls_fine.pgm  hls_gray.pgm  hls_threshold.pgm  identify.py  live_identify.py  morph.pgm  opencv.cpp  pi_identify.py  run.ps1  serve_video.py  stars.csv  test_run_with_file.cpp  threshold.pgm  visualize.ppm  visualized.ppm
.omc/: prd.json  progress.txt  template-version.json
C/: README.md
Centroid/: CMakeLists.txt  centroid_cli.cpp  centroid_extract.cpp  hls_preprocess.cpp  opencv.cpp  test_run_with_file.cpp
Centroid/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
Centroid/test-image/: 10h16m56s-59-51-22.ppm  stars.csv
Centroid/tools/: png_to_ppm.ps1
Tetra/: Tetra.ipynb
benchmarks/: batch_dss_compare.py  coverage_455x3_experiment.py  coverage_sweep.py  fetch_tycho2.py  label_centroids_video.py  mark_centroids.py  plot_db_size.py  test_no_false_accept.py  visualize_db.py
cache/: pyramid_pairs_fov20_mag6.5_min0.25_starsall_cap15_bin2.csv
centroid/: CMakeLists.txt  centroid_cli.cpp  centroid_extract.cpp
data/: tycho2.csv
docs/: REPORT.md
identifier/: CMakeLists.txt
identifier/include/: catalog_db.h  clock_utils.h  identify_tetra.h  star_math.h  star_types.h  verify.h
identifier/src/: attitude.c  batch_synthetic_compare.c  camera_model.c  catalog_db.c  compare.c  demo_centroid_compare.c  identify_from_centroids.c  identify_tetra.c  star_math.c  verify.c
identifier/tests/: test_core.c
identifier/tools/: export_catalog_db.py  export_tetra_db.py
live/: CMakeLists.txt  live_identify.cpp
live/build-mingw/: Makefile
media/: compare_replay.py  overlay_solve.py  plot_all_omega.py  plot_detumble_logs.py  plot_free_detumble.py  plot_presentation_figs.py  plot_tumble_momentum.py  sphere_ra_shift.py
notebooks/: Catalog_vs_Real_Image_Diagnostics.ipynb  OpenStarTracker_Bayesian.ipynb  Pyramid_StarTracker.ipynb  Tetra.ipynb
outputs/: actual_image_ground_truth.csv  actual_image_ground_truth_dec_negative.csv  actual_image_ground_truth_dec_negative_fov20.csv  analyze_openstartracker_matrix.out  batch_progress_check.out  benchmark_algorithms.out  benchmark_algorithms_after_prune.out  benchmark_quick_matrix.out  benchmark_tetra_vs_pyramid.out  c_batch_fov10.csv  c_batch_fov10_quick.csv  catalog_render.ppm  catalog_render_stars.csv  catalog_render_truth.csv  compare_database_sizes.out  open_failure_detail.out  probe_openstartracker.out  probe_pyramid.out  probe_tetra.out  progress_check.out  smoke_test.out  smoke_test_after_prune.out  smoke_test_tetra_pyramid.out
scripts/: batch_dss_compare.py  batch_progress_check.py  batch_real_image_compare.py  benchmark_quick_matrix.py  benchmark_tetra_vs_pyramid.py  check_actual_identifier.py  compare_database_sizes.py  coverage_sweep.py  diagnose_dss_centroids.py  eval_orbit_frames.py  evaluate_actual_image.py  fetch_dss_image.py  fetch_tycho2.py  label_centroids_video.py  live_identify.py  make_test_video.py  mark_centroids.py  parity_harness_pyramid.py  parity_harness_tetra.py  probe_algorithm.py  progress_check.py  pyramid_reference.py  render_catalog_test_image.py  run_catalog_real_diagnostics.py  smoke_test.py  sweep_actual_plate_fit.py  sweep_db.py  test_no_false_accept.py  visualize_db.py  (+4 more)
(+72 files in other folders)
